[package]
name = "bdk-wallet-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_esplora = { version = "0.16.0", features = ["async"] }
bdk_wallet = { version = "1.0.0-beta.1", "features" = [
    "keys-bip39",
    "compiler",
    "rusqlite",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
